# qib-jira

./: .gitignore  README.md  pyproject.toml  qib-jira.py
