[tool.poetry]
name = "qib-jira"
version = "0.1.0"
description = "Download routinely tickets from Cloud JIRA"
authors = ["thanhleviet <thanh.le-viet@quadram.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
jira = "^3.8.0"
schedule = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
